tests/ui/lint/snapshots/single_arm_match_option.snap
---
source: tests/ui/lint/mod.rs
---
  [info] Ineffective match
   ╭─[test.lis:3:3]
 2 │ pub fn test(opt: Option<int>) {
 3 │   match opt {
   ·   ──┬──
   ·     ╰── should be `if let`
 4 │     Some(x) => { let _ = x; },
   ╰────
  help: A match with a single meaningful arm is ineffective. Use `if let Some(x) = value { ... }` instead · code: [lint.single_arm_match]
