tests/ui/lint/snapshots/single_arm_match_result.snap
---
source: tests/ui/lint/mod.rs
---
  [info] Ineffective match
   ╭─[test.lis:3:3]
 2 │ pub fn test(res: Result<int, string>) {
 3 │   match res {
   ·   ──┬──
   ·     ╰── should be `if let`
 4 │     Ok(x) => { let _ = x; },
   ╰────
  help: A match with a single meaningful arm is ineffective. Use `if let Ok(x) = value { ... }` instead · code: [lint.single_arm_match]
