tests/ui/lint/snapshots/single_arm_select_statement_position.snap
---
source: tests/ui/lint/mod.rs
---
  ● Single-arm `select`
   ╭─[test.lis:6:3]
 5 │   let ch = Channel.new<int>()
 6 │   select {
   ·   ───┬──
   ·      ╰── waits on a single operation
 7 │     match ch.receive() {
   ╰────
  help: A `select` with one arm makes no choice between channel operations. Use `match ch.receive() { ... }` directly · code: [lint.single_arm_select]
